margin issue fixed

--- a/src/assets/less/creators.less
+++ b/src/assets/less/creators.less
@@ -222,6 +222,7 @@
             padding: 8rem 6rem 17rem 6rem;
             background-color: @light-green-bg;
             position: relative;
+            margin-top: -1px;
 
             .topbar {
                 position: relative;
@@ -504,6 +505,7 @@
             padding: 8rem 6rem 17rem 6rem;
             background-color: @light-blue-bg;
             position: relative;
+            margin-top: -1px;
 
             .topbar {
                 position: relative;
@@ -685,6 +687,7 @@
             padding: 8rem 6rem 5.5rem 6rem;
             background-color: @light-purple-bg;
             position: relative;
+            margin-top: -1px;
 
             .topbar {
                 position: relative;
