--- a/src/assets/less/copiers.less
+++ b/src/assets/less/copiers.less
@@ -138,6 +138,7 @@
             padding: 8rem 6rem 17rem 6rem;
             background-color: @light-green-bg;
             position: relative;
+            margin-top: -1px;
 
             .topbar {
                 position: relative;
@@ -383,6 +384,7 @@
             padding: 8rem 6rem 17rem 6rem;
             background-color: @light-blue-bg;
             position: relative;
+            margin-top: -1px;
 
             .topbar {
                 position: relative;
@@ -571,6 +573,7 @@
             padding: 8rem 6rem 5.5rem 6rem;
             background-color: @light-purple-bg;
             position: relative;
+            margin-top: -1px;
 
             .topbar {
                 position: relative;
